# cat-cropper

./: .gitignore  README.md  crop_cat.py  pyproject.toml  run_crop_cat.bat
